# scioly-robottour-2024-cpp

./: .clangd  CMakeLists.txt  PID.cpp  README.md  build.sh  chassis.hpp  compile_commands.json  config.hpp  flake.nix  intellisense.sh  movement.cpp  odom.cpp  robot-tour-arduino.ino  scioly-robottour-2024-cpp.ino
.direnv/: flake-profile-3-link
include/: chassis.h  imu.h  position.h
src/: Motor.cpp  chassis.h  config.h  imu.cpp  imu.h  l298n.cpp  l298n.h  main.cpp  movement.cpp  mpu9250_spi.cpp  odom.cpp  path.cpp  path.h  position.h  pursuit.cpp  pursuit.cpp-bak  utils.cpp  utils.h
src/BNO08x/: Adafruit_BNO08x.cpp
src/components/: Motor.cpp
src/mpu9250/: QuaternionFilter.h  mpu9250.h
